# serializer version: 1
# name: test_get_series_urls_all
  list([
    'https://archiveofourown.org/series/2627935',
    'https://archiveofourown.org/series/3108957',
    'https://archiveofourown.org/series/15213',
  ])
# ---
# name: test_get_series_urls_bookmarks
  list([
    'https://archiveofourown.org/series/15213',
  ])
# ---
# name: test_get_title
  list([
    "id:12345678 title:so I open the window to hear sounds of people author:oriflamme fandom:The Locked Tomb Series | Gideon the Ninth Series - Tamsyn Muir pairing: rating:Teen And Up Audiences warning:No Archive Warnings Apply category:Gen words:5688 chapters:1 language:English published:2022-09-20 updated: series_title:it's about the bones 👌 series_index:3",
  ])
# ---
# name: test_get_title_multiple_series
  list([
    'AO3 Skins, :has() selector 1, 1 Fandom - Fandom, AO3, No Fandom',
  ])
# ---
# name: test_get_total_pages
  None
# ---
# name: test_get_work_metadata_from_work_returns_expected_keys
  dict({
    'author': 'oriflamme',
    'category': 'Gen',
    'chapters': '1',
    'fandom': 'The Locked Tomb Series | Gideon the Ninth Series - Tamsyn Muir',
    'language': 'English',
    'pairing': '',
    'published': '2022-09-20',
    'rating': 'Teen And Up Audiences',
    'series_index': '3',
    'series_title': "it's about the bones 👌",
    'title': 'so I open the window to hear sounds of people',
    'updated': '',
    'warning': 'No Archive Warnings Apply',
    'words': '5688',
    'worknum': '12345678',
  })
# ---
# name: test_get_work_urls
  list([
    'https://archiveofourown.org/works/66326125',
    'https://archiveofourown.org/works/18623245',
    'https://archiveofourown.org/works/34816549',
    'https://archiveofourown.org/works/42461841',
    'https://archiveofourown.org/works/42461502',
    'https://archiveofourown.org/works/42461232',
    'https://archiveofourown.org/works/42460935',
    'https://archiveofourown.org/works/42460749',
    'https://archiveofourown.org/works/42460338',
    'https://archiveofourown.org/works/23009290',
    'https://archiveofourown.org/works/17389052',
    'https://archiveofourown.org/works/568141',
    'https://archiveofourown.org/works/218699',
    'https://archiveofourown.org/works/218655',
    'https://archiveofourown.org/works/218660',
    'https://archiveofourown.org/works/218671',
    'https://archiveofourown.org/works/218646',
    'https://archiveofourown.org/works/218676',
    'https://archiveofourown.org/works/218635',
  ])
# ---
